added invi to authors.

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,5 +1,6 @@
 Main Dev Team:
 Pablo Martin <caedes@sindominio.net>
+Invi <invi@lorea.org>
 
 Attributions:
  this script uses heavily the following projects, so special thnks go to devs from:
